--- a/posts/00-hello-world/hello-world.mdx
+++ b/posts/00-hello-world/hello-world.mdx
@@ -1,7 +1,8 @@
 ---
 title: Hello world!
 slug: hello-world
-author: Jason Lengstorf
+author: Jorge Contreras
+image: './images/szabo-viktor-vE1As8YoJRs-unsplash.jpg'
 ---
 
 This is my first blog post. I wrote it with MDX!
